Replaced List.of with Collections.singleton for JRE8